# mcp_exam

./: README.md
rust_sse/: Cargo.toml
rust_sse/src/: handler.rs  main.rs  tools.rs
rust_stdio/src/: handler.rs
